Pack endpoint update
